unpackaged/main/default/objects/Live_Event_Check__c/Live_Event_Check__c.object-meta.xml
<CustomObject>
    <label>Live Event Coverage Checklist</label>
    <nameField>
        <label>Live Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Event Coverage Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>