unpackaged/main/default/objects/Live_Event_Check__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Live Event Coverage Checklists</relationshipLabel>
    <relationshipName>Live_Event_Coverage_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>