unpackaged/main/default/objects/Live_Event_Check__c/fields/CDN_Regional_Performance_Issues__c.field-meta.xml
<CustomField>
    <fullName>CDN_Regional_Performance_Issues__c</fullName>
    <defaultValue>(&quot;No issues observed&quot;)</defaultValue>
    <label>CDN Regional Performance Issues</label>
    <type>TextArea</type>
</CustomField>