unpackaged/main/default/objects/Live_Event_Check__c/fields/Clip_quality_similar_to_input_stream__c.field-meta.xml
<CustomField>
    <fullName>Clip_quality_similar_to_input_stream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the criteria are met</description>
    <label>Clip quality similar to input stream</label>
    <type>Checkbox</type>
</CustomField>