unpackaged/main/default/objects/Live_Event_Check__c/fields/Count_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Count_Coverage__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>