unpackaged/main/default/objects/Live_Event_Check__c/fields/Countdown_Timer_Working_as_Expected__c.field-meta.xml
<CustomField>
    <fullName>Countdown_Timer_Working_as_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Countdown Timer Working as Expected</label>
    <type>Checkbox</type>
</CustomField>