unpackaged/main/default/objects/Live_Event_Check__c/fields/Downtime_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Downtime_in_Minutes__c</fullName>
    <label>Downtime in Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>