unpackaged/main/default/objects/Live_Event_Check__c/fields/DRM__c.field-meta.xml
<CustomField>
    <fullName>DRM__c</fullName>
    <label>DRM</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>使用</fullName>
            </value>
            <value>
                <fullName>不使用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>