unpackaged/main/default/objects/Live_Event_Check__c/fields/Encoder_Settings_Notes__c.field-meta.xml
<CustomField>
    <fullName>Encoder_Settings_Notes__c</fullName>
    <label>Encoder Settings Notes</label>
    <type>TextArea</type>
</CustomField>