unpackaged/main/default/objects/Live_Event_Check__c/fields/Event_Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_and_Time__c</fullName>
    <formula>TEXT(Live_Event_Coverage__r.Event_Start_Date__c)  &amp; &quot; &quot; &amp; TEXT(Live_Event_Coverage__r.Event_Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date and Time</label>
    <type>Text</type>
</CustomField>