unpackaged/main/default/objects/Live_Event_Check__c/fields/Failure_of_Live_Jobs_or_Redundancy_Group__c.field-meta.xml
<CustomField>
    <fullName>Failure_of_Live_Jobs_or_Redundancy_Group__c</fullName>
    <defaultValue>(&quot;No issues observed&quot;)</defaultValue>
    <label>Failure of Live Jobs or Redundancy Group</label>
    <type>TextArea</type>
</CustomField>