unpackaged/main/default/objects/Live_Event_Check__c/fields/FPS__c.field-meta.xml
<CustomField>
    <fullName>FPS__c</fullName>
    <label>FPS</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>