unpackaged/main/default/objects/Live_Event_Check__c/fields/Input_Drift_3__c.field-meta.xml
<CustomField>
    <fullName>Input_Drift_3__c</fullName>
    <label>Input Drift &lt;3</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
                <label>Passed on all Streams</label>
            </value>
            <value>
                <fullName>Not Passed on Some Streams</fullName>
            </value>
            <value>
                <fullName>Not Passed</fullName>
                <label>Not Passed on all Streams</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>正常</fullName>
            </value>
            <value>
                <fullName>異常有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>