unpackaged/main/default/objects/Live_Event_Check__c/fields/Live_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Status__c</fullName>
    <description>Live Event Coverage Status</description>
    <formula>TEXT(Live_Event_Coverage__r.Status__c)</formula>
    <label>Live Event Status</label>
    <type>Text</type>
</CustomField>