unpackaged/main/default/objects/Live_Event_Check__c/fields/Looping__c.field-meta.xml
<CustomField>
    <fullName>Looping__c</fullName>
    <defaultValue>(&quot;No issues observed&quot;)</defaultValue>
    <label>Looping</label>
    <type>TextArea</type>
</CustomField>