unpackaged/main/default/objects/Live_Event_Check__c/fields/Max_CCU__c.field-meta.xml
<CustomField>
    <fullName>Max_CCU__c</fullName>
    <label>Max CCU</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>