unpackaged/main/default/objects/Live_Event_Check__c/fields/On_Duty__c.field-meta.xml
<CustomField>
    <fullName>On_Duty__c</fullName>
    <label>On Duty</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>