unpackaged/main/default/objects/Live_Event_Check__c/fields/Simulive__c.field-meta.xml
<CustomField>
    <fullName>Simulive__c</fullName>
    <label>Simulive</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>使用</fullName>
            </value>
            <value>
                <fullName>不使用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>