unpackaged/main/default/objects/Live_Event_Check__c/fields/Simulive_Experience_Overall__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Experience_Overall__c</fullName>
    <label>Simulive Experience Overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Not Passed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>