unpackaged/main/default/objects/Live_Event_Check__c/fields/Simulive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Notes__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Simulive Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>