unpackaged/main/default/objects/Live_Event_Check__c/fields/Stream_Names_and_IDs__c.field-meta.xml
<CustomField>
    <fullName>Stream_Names_and_IDs__c</fullName>
    <inlineHelpText>This field is required for high profile events and events where an issue was observed.</inlineHelpText>
    <label>Stream Names and IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>