unpackaged/main/default/objects/Live_Event_Check__c/fields/Video_Started_After_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Video_Started_After_Countdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Started After Countdown</label>
    <type>Checkbox</type>
</CustomField>